deploy/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jarvis
  namespace: devops
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: "/" 
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: jarvis.k8s.ebupt.com
    http:
      paths:
      - path: /
        backend:
          serviceName: jarvis
          servicePort: 8080
